# DECODE_Cloud_WorkerAPI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  application_config.yaml  pyproject.toml  requirements.txt  version_config.yaml
.github/: copilot-instructions.md
.github/workflows/: code-checks.yaml  publish-version-ecr.yaml  publish-version-gh.yaml  publish-version.yaml
api/: config.py  database.py  dependencies.py  exceptions.py  main.py  models.py  queue.py  settings.py
api/core/: aws.py  filesystem.py  queue.py
api/crud/: __init__.py  file.py  job.py  model.py
api/endpoints/: files.py  job_update.py  jobs.py  models.py  predict.py  token.py  train.py  user.py
api/schemas/: __init__.py  file.py  job.py  job_update.py  model.py  user.py
scripts/: docker.py  serve.py  setup.sh  vars.py
src/: .env.example  config.py  database.py  dependencies.py  exceptions.py  main.py  models.py  queue.py  settings.py
src/core/: filesystem.py  queue.py  user.py
src/crud/: __init__.py  file.py  job.py  model.py
src/endpoints/: files.py  models.py  predict.py  token.py  train.py  user.py
src/schemas/: __init__.py  file.py  job.py  model.py  token.py
tests/: .env.test  conftest.py  pytest.ini  test_files.py  test_filesystem.py  test_jobs.py  test_queue [conflicted].py  test_queue.py  test_queue_backup.py  test_train.py
tests/integration/: conftest.py
tests/unit/: test_api_specification_static.py  test_exceptions.py  (+1 more)
workerfacing_api/: auth.py  dependencies.py  exceptions.py  main.py  queue.py  settings.py  tags.py
(+24 files in other folders)
